Fix bug where sticky menu overlaps language dropdown

--- a/csfieldguide/static/scss/website.scss
+++ b/csfieldguide/static/scss/website.scss
@@ -132,6 +132,7 @@ ol, ul {
   top: 1rem !important;
   max-height: calc(100vh - #{$navbar-height});
   overflow-y: auto;
+  z-index: 10;
   .nav-link {
     border: 1px solid transparent;
     margin-bottom: 1px;
